# cleanroom-rs

./: .pre-commit-config.yaml  Cargo.toml  README.md  cspell.json  toolchain.toml
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yaml  nightly.yaml
commands/: xxx_test.toml
crates/cli/: Cargo.toml
crates/cli/commands/: _arch_base.toml  _arch_initrd.toml  _distribution.toml  _distribution_arch.toml  _distribution_serpentos.toml  _ensure_depmod.toml  _ensure_development.toml  _ensure_hwdb.toml  _ensure_ldconfig.toml  _ensure_man_pages.toml  _ensure_no_unused_shell_files.toml  _ensure_pacman_polish.toml  _export_root_fs.toml  _moss.toml  _pacman.toml  _pacstrap.toml  _serpentos_base.toml  add_packages.toml  debug_mode.toml  define_system.toml  distribution.toml  export_cpio.toml  export_root_fs.toml  export_root_image.toml  export_verity_image.toml  hook_arch_extra_initrd_packages.toml  hook_post_pacman_key_init.toml  hook_write_pacman_conf.toml  pkg_baremetal_system.toml  pkg_bootable_system.toml  pkg_kernel.toml  pkg_networked_system.toml  set_locales.toml  set_password.toml  set_timezone.toml  strip_documentation.toml  strip_exotic_gcc_languages.toml  strip_legal.toml  strip_pacman_db.toml  systemd_enable.toml  (+1 more)
crates/cli/initialize_files/: all_.env  all_.envrc  all_.gitignors  arch_README.md  arch_example_system.toml  arch_setup.sh  serpentos_README.md  serpentos_example_system.toml  serpentos_setup.sh  unknown_README.md  unknown_example_system.toml
crates/cli/src/: agent.rs  agent_runner.rs  commands.rs  context.rs  footer.sh  header.sh  init.rs  lib.rs  main.rs  pre_command.sh  printer.rs  scripts.rs  systems.rs
crates/contained_command/: Cargo.toml
crates/contained_command/src/: command.rs  lib.rs  runner.rs
crates/util/: Cargo.toml
crates/util/src/: binaries.rs  lib.rs  users.rs
src/: commands.rs  lib.rs  main.rs  printer.rs
