[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cleanroom"
path = "src/main.rs"

[dependencies]
contained_command = { path = "../contained_command" }
util = { path = "../util" }

ansi-escapes = "0.1"
ansi_term = "0.12"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.29", default-features = false, features = [ "io-util", "macros", "process", "rt-multi-thread", "sync" ]}
toml = "0.7.6"
uuid = { version = "1.4.1", features = ["v4"] }
include_dir = "0.7.3"
