# cSpell: ignore tempfile
[package]
name = "cli"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "cleanroom"
path = "src/main.rs"

[dependencies]
contained_command = { path = "../contained_command" }
util = { path = "../util" }

ansi-escapes = "0.1"
ansi_term = "0.12"
anyhow = "1.0"
async-recursion = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.8"
tokio = { version = "1.32", default-features = false, features = [
  "io-util",
  "macros",
  "process",
  "rt",
  "sync",
] }
toml = "0.8"
uuid = { version = "1.4", features = ["v4"] }
include_dir = "0.7"
