[package]
name = "contained_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

thiserror = { version = "1.0" }
tokio = { version = "1.32", default-features = false, features = ["process"] }
