[package]
name = "util"
description = "Utility functions for cleanroom"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
thiserror = { version = "1.0" }
nix = { version = "0.27", default-features = false, features = ["user"] }
